A feladat a 22. ora anyagaig

--- a/src/app/_components/dish-detail/dish-detail.component.html
+++ b/src/app/_components/dish-detail/dish-detail.component.html
@@ -6,5 +6,5 @@
       <label for="dish-name">Fogás: </label>
       <input id="dish-name" [(ngModel)]="dish.name" placeholder="név">
     </div>
-  
+    <button type="button" (click)="goBack()">vissza</button>
   </div>
