--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <h1>{{title}}</h1>
-<app-dishes></app-dishes>
+<nav>
+    <a routerLink="/dishdash">Ajánlatok</a>
+    <a routerLink="/dishes">Fogások</a>
+</nav>
+<router-outlet></router-outlet>
 <app-msgs></app-msgs>
