--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <h1>{{title}}</h1>
 <nav>
     <a routerLink="/dishdash">Ajánlatok</a>
-    <a routerLink="/dishes">Fogások</a>
+    <a routerLink="/dishes">Ételeink</a>
 </nav>
 <router-outlet></router-outlet>
-<app-msgs></app-msgs>
