A kesz (24.) hazi feladat

--- a/src/app/_components/dish-detail/dish-detail.component.html
+++ b/src/app/_components/dish-detail/dish-detail.component.html
@@ -5,5 +5,7 @@
       <label for="dish-name">Fogás: </label>
       <input id="dish-name" [(ngModel)]="dish.name" placeholder="név">
     </div>
+    <button (click)="save()">mentés</button>
+    <button (click)="delete()">törlés</button>
     <button type="button" (click)="goBack()">vissza</button>
   </div>
